; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_volume.c_vlclua_volume_down.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_volume.c_vlclua_volume_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_SUCCESS = common dso_local global i32 0, align 4
@AOUT_VOLUME_DEFAULT = common dso_local global float 0.000000e+00, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_volume_down to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_volume_down(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32* @vlclua_get_playlist_internal(i32* %9)
  store i32* %10, i32** %3, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @vlc_playlist_GetPlayer(i32* %11)
  store i32* %12, i32** %4, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @luaL_optinteger(i32* %13, i32 1, i32 1)
  store i32 %14, i32* %6, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @vlc_player_aout_DecrementVolume(i32* %15, i32 %16, float* %5)
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @VLC_SUCCESS, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %1
  %22 = load float, float* %5, align 4
  %23 = load float, float* @AOUT_VOLUME_DEFAULT, align 4
  %24 = fmul float %22, %23
  %25 = call i64 @lroundf(float %24) #3
  br label %27

26:                                               ; preds = %1
  br label %27

27:                                               ; preds = %26, %21
  %28 = phi i64 [ %25, %21 ], [ 0, %26 ]
  store i64 %28, i64* %8, align 8
  %29 = load i32*, i32** %2, align 8
  %30 = load i64, i64* %8, align 8
  %31 = call i32 @lua_pushnumber(i32* %29, i64 %30)
  ret i32 1
}

declare dso_local i32* @vlclua_get_playlist_internal(i32*) #1

declare dso_local i32* @vlc_playlist_GetPlayer(i32*) #1

declare dso_local i32 @luaL_optinteger(i32*, i32, i32) #1

declare dso_local i32 @vlc_player_aout_DecrementVolume(i32*, i32, float*) #1

; Function Attrs: nounwind
declare dso_local i64 @lroundf(float) #2

declare dso_local i32 @lua_pushnumber(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
